--- a/public/styles.css
+++ b/public/styles.css
@@ -7,10 +7,25 @@ body{
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	/*height: 2000px;/**/
 	max-width: 100%;
 	overflow-x: hidden;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;/*
+	font-weight: bold;*/
+	background: rgba(10,10,10,0.2);
+}
+
+a:visited {
+	color: inherit;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 .inline {
@@ -20,6 +35,20 @@ body{
 
 .center {
 	text-align: center;
+}
+
+.float-left{
+	float: left;	
+	margin: 0 0 0 20px;
+}
+
+.float-right{
+	float: right;
+	margin: 0 20px 0 0;
+}
+
+.hidden {
+	display: none;
 }
 
 .spcl-text {
@@ -36,7 +65,30 @@ body{
 
 .main-content {
 	height: 100%;
+	visibility: hidden;
 }
+
+
+/*Loading*/
+
+.foo {
+	height: 100%;
+	width: 100%;
+	background: black;
+	position: absolute;
+	top:0px;
+	left:0px;
+	z-index: 10000;
+	text-align: center;
+	border-top: 10px solid #e44d26;
+}
+
+.foo img {
+	margin: auto;
+}
+
+/*Loading Ends*/
+
 
 .intro-section {
 	height: 1050px;
@@ -57,7 +109,7 @@ body{
 }
 
 .intro-section .back {
-	background: url("img/dark_designer-2560x1600.jpg");
+	background: url("img/sf1.jpg");
 	-webkit-background-size: cover cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -69,7 +121,7 @@ body{
 }
 
 .intro-section .blurred {
-	background: url("img/dark_designer-2560x1600_blurred.jpg");
+	background: url("img/sf2.jpg");
 	-webkit-background-size: cover cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -82,7 +134,7 @@ body{
 
 }
 
-.intro-section .content{
+.intro-section .h-content{
 	font-size: 4.5em;
 	color: #ffffff;
 	height: 1050px;
@@ -101,4 +153,346 @@ body{
 #head-text {
 	position: absolute;
 	top: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+#nav{
+	list-style: none;
+	position: fixed;
+	top:82px;
+	left: 0px;
+	background: rgba(10,10,10,0.6);
+	padding: 5px;
+	z-index: 1000;
+
+}
+
+#nav li{
+	margin: 10px 0px 10px 0px;
+	
+}
+
+/*Navigation Pane Ends*/
+
+/*Parallax Images and Content*/
+
+
+
+#intro{
+	background: url(img/story1.jpg) 50% 0 no-repeat fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	/*ie8 fix*/
+	
+}
+
+#intro .bg1 {
+	/*background: url(img/Cloud%203.png) 0% 0 no-repeat fixed;*/
+	height: 400px;
+	margin: 0 auto;
+	padding: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 0;
+}
+
+#second{
+	background:url(img/firstBG.jpeg) 50% 0 no-repeat fixed; /*http://openlab.citytech.cuny.edu/esimon-eportfolio/files/2012/11/449671main_image_feature_1652_full_full.jpg*/
+	height: 400px;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	/*ie8 fix*/
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/firstBG.jpeg',sizingMethod='scale');
+
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/firstBG.jpeg',sizingMethod='scale')";
+}
+
+#third{
+	background: #000 50% 0 no-repeat fixed;
+	height: 400px;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+#third .bg1{
+	background: url(img/story3.jpg) 0% 0 no-repeat fixed;
+	height: 400px;
+	margin: 0 auto;
+	padding: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 0;
+}
+/*
+#third .bg2{
+	background: url(img/contacts2.gif) 0% 0 no-repeat fixed;
+	height: 400px;
+	margin: 0 auto;
+	padding: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 0;
+}
+
+#third .bg3{
+	background: url(img/contacts3.gif) 0% 0 no-repeat fixed;
+	height: 400px;
+	margin: 0 auto;
+	padding: 0;
+	position: absolute;
+	width: 100%;
+	z-index: 0;
+}
+*/
+.story{
+	margin: 0 auto;
+	/*min-width: 980px;*/
+	/*overflow: auto;*/
+	height: 400px;
+	/*width: 980px;*/
+}
+
+.story .float-left, .story .float-right{
+	padding: 100px 0 0 0;
+	position: relative;
+	/*width: 350px;	*/
+}
+
+.detailed-content {
+	font-size: 21px;
+	color: white;/*
+	height: 900px;*/
+	padding: 3% 20%;
+	line-height: 30px;
+	position: relative;
+	box-shadow: 0px 7px 10px #222, 0px -7px 10px #222;
+	z-index: 2;
+}
+
+.content {
+	padding: 10px;
+	border-top: 1px dashed #ffffff;
+	border-bottom: 1px dashed #ffffff;
+	text-align: justify;
+}
+
+.detailed-content .spin-text {
+	font-size: 30px;
+	line-height: 40px;
+	background: rgba(10,10,10,0.6);
+	padding: 10px;
+	cursor: pointer;
+	margin: 20px 0px;
+}
+
+.detailed-content .spinning-text  {
+	/*background: rgba(20,20,20,0.7);*/
+	padding: 20px;
+	line-height: 40px;/*
+	border-radius: 50px;*/
+}
+
+.spin-text img {
+	margin-left: -40px;
+	margin-top: -70px;
+}
+
+.blue-bg {
+	/*background: #5E2B87;*/
+	background: #335;
+}
+
+.cyan-bg {
+	background: #00A0B1;
+}
+
+.green-bg {
+	/*background: #159c58;*/
+	background: #353;
+}
+
+.red-bg {
+	/*background: #AE2B31; #bd522c; #9E1828;*/
+	background: #533;
+}
+
+.gold-bg {
+	background: #DAA547;
+}
+
+.grey-bg {
+	background: #333;
+}
+
+.story-heading {
+	font-size: 100px;
+	line-height: 100px ;
+	color: white;
+	background: rgba(20,20,20,0.7);
+	font-weight: bold;
+}
+
+.story-heading-loading {
+	font-size: 50px;
+	line-height: 60px ;
+	color: white;
+	background: rgba(20,20,20,0.7);
+	font-weight: bold;
+}
+
+.story-container {
+	color: white;
+}
+
+#change-text {
+	vertical-align: middle;
+	cursor: pointer;
+}
+
+@-webkit-keyframes breathe-head {  
+	0% {  
+		-webkit-transform: rotate(30deg) translate3d(0px, 0px, 0px);  
+	}  
+	40% {  
+		-webkit-transform: rotate(-30deg) translate3d(-6px, -3px, 0px);  
+	}  
+
+	100% {  
+		-webkit-transform: rotate(30deg) translate3d(0px, 0px, 0px);  
+	}  
+} 
+
+@-moz-keyframes breathe-head {  
+	0% {  
+		-moz-transform: rotate(30deg) translate(0px, 0px);  
+	}  
+	40% {  
+		-moz-transform: rotate(-30deg) translate(-6px, -3px);  
+	}  
+
+	100% {  
+		-moz-transform: rotate(30deg) translate(0px, 0px);  
+	}  
+}  	
+
+@-ms-keyframes breathe-head {  
+	0% {  
+		-ms-transform: rotate(30deg) translate(0px, 0px);  
+	}  
+	40% {  
+		-ms-transform: rotate(-30deg) translate(-6px, -3px);  
+	}  
+
+	100% {  
+		-ms-transform: rotate(30deg) translate(0px, 0px);  
+	}  
+}  
+
+@-o-keyframes breathe-head {  
+	0% {  
+		-o-transform: rotate(30deg) translate(0px, 0px);  
+	}  
+	40% {  
+		-o-transform: rotate(-30deg) translate(-6px, -3px);  
+	}  
+
+	100% {  
+		-o-transform: rotate(30deg) translate(0px, 0px);  
+	}  
+}  
+
+.breath {  
+	-webkit-animation: breathe-head 500ms infinite both ease-in-out;  
+	/*    -moz-animation: breathe-head 500ms infinite both ease-in-out;  */
+	-ms-animation: breathe-head 500ms infinite both ease-in-out;  
+	-o-animation: breathe-head 500ms infinite both ease-in-out;  
+}  
+
+.social {
+	width: calc(50% - 10px);
+	width: 49%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.social img {
+	vertical-align: middle;
+}
+
+.social:first-child img {
+	vertical-align: middle;
+	margin: 5px 0px 0px 5px;/*
+	box-shadow: 0px 0px 5px white;*/
+}
+
+.social:first-child a {
+	background:inherit;
+}
+
+.resume table{
+	width: 100%;
+	border: none;
+}
+
+.resume table td:last-child, .resume table th:last-child{
+	text-align: right;
+}
+
+.resume table tr {
+	vertical-align: top;
+}
+
+.resume table td, .resume table th {
+	padding: 5px 20px;
+}
+
+.res-block {
+	margin-top: 50px;
+}
+
+.res-block .res-title {
+	font-weight: bold;
+	margin-bottom: 10px;
+	font-size: 26px;
+	color: #000;
+}
+
+.res-block .res-content {
+	font-size: 21px;
+}
+
+
+/*Loading*/
+
+.foo {
+	height: 100%;
+	width: 100%;
+	background: black;
+	position: absolute;
+	top:0px;
+	left:0px;
+	z-index: 10000;
+	text-align: center;
+	border-top: 10px solid #e44d26;
+}
+
+.foo img {
+	margin: auto;
 }
