--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,8 +8,9 @@ body{
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
 	/*height: 2000px;/**/
-	max-width: 100%;
-	overflow-x: hidden;
+	max-width: 100%;/*
+	overflow-x: hidden;*/
+	min-width: 768px;
 }
 
 a {
